[tool.poetry]
name = "laijaai"
version = "0.1.0"
description = "Personal project code assistant"
authors = ["Garance Colomer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.40.2"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
