[tool.poetry]
name = "laijaai"
version = "0.1.0"
description = "Personal IA"
authors = ["Garance Colomer"]
packages = [
    { include = "packages/ai", from = "." },
    { include = "packages/back", from = "." },
    { include = "packages/front", from = "." },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
databases = {extras = ["sqlite"], version = "^0.9.0"}
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
